<resources xmlns:tools="http://schemas.android.com/tools">

    <!--  Activitiy Names  -->
    <string name="app_name">CST2335</string>
    <string name="home_name">Home</string>
    <string name="favorites_name">Favorites</string>
    <string name="baseActivity_name">BBC News</string>
    <string name="vistitorsLog_name">Visitors Log</string>
    <string name="bbc_news_item_name">Article </string>

    <!--  Drawer Header  -->
    <string name="nav_header_title">Final Project</string>
    <string name="nav_header_subtitle">shaw0214@algonquinlive.com</string>

    <!-- Navigation Drawer Open/Close   -->
    <string name="navigation_drawer_open">Start Exploring</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--  Name for the Drawer Menu items   -->
    <string name="menu_home">Home v1</string>
    <string name="menu_bbcNews">BBC Newsv1</string>
    <string name="menu_favorites">Favorites v1</string>
    <string name="menu_visitorsLog">Visitors Log v1</string>
    <string name="menu_exit">Exit</string>

    <!--  Home Layout  -->
    <string name="home_message">Welcome to the Homepage! \n This application was developed by Jenny Shaw! \n \n I invite first-time visitors to explore and add there name to the visitors log before departing!!</string>

    <!--  Edit text fields  -->
    <string name="edit_text_firstname">Enter First Name</string>
    <string name="edit_text_lastName">Enter Last Name</string>

    <!--  Button Text Save/Insert  -->
    <string name="button_save">Save</string>
    <string name="button_insert">Insert</string>

    <!--  Favorites Layout etc...  -->
    <string name="fav_list_tile">Favorite title</string>
    <string name="fav_list_url">Favorite Url</string>

    <!--  Alert Box  -->
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selection">What would you like to do?</string>
    <string name="selected">Selected row is: </string>
    <string name="open_link">Open Article</string>
    <string name="news_alert_databasesave">Save to Database</string>
    <string name="news_alert_cancel">Cancel</string>


    <!--  Snackbar Messages  -->
    <string name="saving_name">Please save your name only once</string>
    <string name="saved_name">Your name has been saved</string>
    <string name="article_saved">Article Saved</string>

    <!--  BBC News Layout etc...  -->
    <string name="news_title">News Title: \n</string>
    <string name="news_description">News Description: \n</string>
    <string name="news_date">News Date: \n</string>
    <string name="news_url">News URL: \n</string>
    <string name="article_title">Article title: \n</string>
    <string name="article_url">Article url: \n</string>


    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save_article">Do you want to save this article?</string>
    <string name="info">Swipe right to access the navigation drawer.</string>



</resources>