<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_bbcNews"
            android:icon="@drawable/ic_baseline_cloud_queue_24"
            android:title="@string/menu_bbcNews" />
        <item
            android:id="@+id/menu_favorites"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/menu_favorites"/>
        <item
            android:id="@+id/menu_visitorsLog"
            android:icon="@drawable/ic_baseline_playlist_add_24"
            android:title="@string/menu_visitorsLog" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit" />
    </group>

</menu>